--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="continue-button">
                         <button>Solicitar orçamento</button>
                     </div>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/obrigado.html">
+                    <input type="hidden" name="_next" value="https://ismael-amorim.github.io/MetalColor/obrigado.html">
                     <input type="hidden" name="_subject" value="Novo orçamento recebido de:">
 
             </form>
