--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <div class="type-inputs">
                         <div class="input-box">
-                            <input id="banho" type="text" name="pintura" placeholder="Ouro, Prata">
+                            <input id="banho" type="text" name="banho" placeholder="Ouro, Prata">
                         </div>
                     </div>
 
