--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <div class="continue-button">
                         <button>Solicitar orçamento</button>
                     </div>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/obrigado.html">
-                    <input type="hidden" name="_subject" value="Novo orçamento recebido de:">
+                    <input type="hidden" name="_next" value="obrigado.html">
+                    <input type="hidden" name="_subject" value="Novo orçamento recebido!">
 
             </form>
         </div>
