--- a/pedido.html
+++ b/pedido.html
@@ -97,16 +97,17 @@
                             <h4>Tipo do produto</h4>
                         </div>
                         <div class="input-box">
-                            <input type="text" name="Tipo do produto"
-                                placeholder="Arganel, Pin, Chaveiro, Medalha, Machadinha ou Troféu" size="50">
+                            <textarea id="type" type="text" name="Tipo do produto"
+                                placeholder="Arganel, Pin, Chaveiro, Medalha, Machadinha ou Troféu"
+                                size="50"></textarea>
                             <label for="Tipo do produto"></label>
                         </div>
                     </div>
                     <div class="continue-button">
                         <button id="send">Enviar pedido</button>
                     </div>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/obrigado.html">
-                    <input type="hidden" name="_subject" value="Novo pedido recebido de:">
+                    <input type="hidden" name="_next" value="https://ismael-amorim.github.io/MetalColor/obrigado.htmll">
+                    <input type="hidden" name="_subject" value="Novo pedido recebido">
             </form>
         </div>
         <footer>
