--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
         <footer>
             <div class="redes">
                 <img id="logo" src="logo.png" alt="Logo">
-                <img src="instagram.png" alt="Instagram">
+                <a href="https://www.instagram.com/metal.color/"><img src="instagram.png" alt="Instagram"></a>
                 <img src="facebook.png" alt="Facebook">
-                <img src="whatsapp.png" alt="WhatsApp">
+                <a href="https://wa.me/51981175635"><img src="whatsapp.png" alt="WhatsApp"></a>
             </div>
         </footer>
     </div>
