--- a/pedido.html
+++ b/pedido.html
@@ -115,7 +115,7 @@
                 <img id="logo" src="logo.png" alt="Logo">
                 <a href="https://www.instagram.com/metal.color/"><img src="instagram.png" alt="Instagram"></a>
                 <img src="facebook.png" alt="Facebook">
-                <a href="https://wa.me/51981175635"><img src="whatsapp.png" alt="WhatsApp"></a>
+                <a href="https://wa.me/5551981175635?textEu%20quero%20fazer%20um%20pedido"><img src="whatsapp.png" alt="WhatsApp"></a>
             </div>
         </footer>
     </div>
