--- a/pedido.html
+++ b/pedido.html
@@ -32,7 +32,7 @@
                         <h1>Faça seu pedido!</h1>
                     </div>
                     <div class="login-button">
-                        <a class="button" href="pedido.html" target="_blank">Orçamento</a>
+                        <a class="button" href="orçamento.html" target="_blank">Orçamento</a>
                     </div>
                 </div>
 
